--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
       </nav>
 
       <!-- Carousel -->
-      <div class="carousel slide" data-bs-ride="carousel">
+      <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img
