--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     />
     <meta
       name="description"
-      content="NJB Servicio Técnico Eléctrico ofrece instalaciones eléctricas residenciales, procesos de automatización y sistemas de aire acondicionado, especializados en soluciones para empresas constructoras y fábricas. Garantizamos calidad, seguridad y eficiencia en cada proyecto. Contáctenos para obtener un servicio confiable y profesional."
+      content="NJB Servicio Técnico Eléctrico ofrece instalaciones eléctricas residenciales, automatización y sistemas de aire acondicionado. Nos especializamos en soluciones para constructoras y fábricas, garantizando calidad, seguridad y eficiencia en cada proyecto. Contáctenos para un servicio confiable y profesional."
     />
     <meta name="author" content="Nestor Javier Buceta blackyDev" />
     <meta name="copyright" content="NJB Servicio Técnico Eléctrico" />
@@ -128,6 +128,7 @@
               class="navbar-brand-logo img-fluid"
               src="./assets/recortada-removebg-preview.png"
               alt="logo"
+              title ="logo"
             />
           </a>
           <button
@@ -184,6 +185,7 @@
               src="./assets/Postes.jpg"
               class="d-block w-100"
               alt="Imagen 1"
+              title="postes"
             />
             <div class="carousel-overlay"></div>
           </div>
@@ -192,6 +194,7 @@
               src="./assets/medidores exterior.jpg"
               class="d-block w-100"
               alt="Imagen 2"
+              title="medidores"
             />
           </div>
           <div class="carousel-overlay"></div>
@@ -200,6 +203,7 @@
               src="./assets/subestacion electrica.jpg"
               class="d-block w-100"
               alt="Imagen 3"
+              title="subestacion"
             />
             <div class="carousel-overlay"></div>
           </div>
@@ -254,6 +258,7 @@
                   class="section-us-img img-fluid"
                   src="./assets/trabajo quienes somos.jpg"
                   alt="nosotros"
+                  title="nosotros"
                 />
               </div>
             </div>
@@ -348,6 +353,7 @@
                     src="./assets/instalacion domiciliaria.jpg"
                     class="card-img-top card-service-img"
                     alt="domicilios"
+                    title="domicilios"
                   />
                   <div class="card-body card-service-body">
                     <h5 class="card-title card-service-title">
@@ -366,6 +372,7 @@
                     src="./assets/deteccion de fallas 2.jpg"
                     class="card-img-top card-service-img"
                     alt="fallas"
+                    title="fallas"
                   />
                   <div class="card-body card-service-body">
                     <h5 class="card-title card-service-title">
@@ -384,6 +391,7 @@
                     src="./assets/plano-electrico-4.jpg"
                     class="card-img-top img-fluid card-service-img"
                     alt="planos"
+                    title="planos"
                   />
                   <div class="card-body card-service-body">
                     <h5 class="card-title card-service-title">
@@ -402,6 +410,7 @@
                     src="./assets/domotica.jpg"
                     class="card-img-top card-service-img"
                     alt="domotica"
+                    title="domotica"
                   />
                   <div class="card-body card-service-body">
                     <h5 class="card-title card-service-title">
@@ -420,6 +429,7 @@
                     src="./assets/aire-acondicionado.jpg"
                     class="card-img-top card-service-img"
                     alt="aires"
+                    title="aires acondicionados"
                   />
                   <div class="card-body card-service-body">
                     <h5 class="card-title card-service-title">
@@ -438,6 +448,7 @@
                     src="./assets/automatizacion-industrial.jpg"
                     class="card-img-top card-service-img"
                     alt="automatizacion"
+                    title="automatizacion"
                   />
                   <div class="card-body card-service-body">
                     <h5 class="card-title card-service-title">
