--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
               <div class="card">
                 <img
                   class="section-us-img img-fluid"
-                  src="./assets/trabajo quienes somos.jpg"
+                  src="./assets/trabajo quienes somos.webp"
                   alt="nosotros"
                   title="nosotros"
                 />
@@ -426,7 +426,7 @@
               <div class="col-lg-4 mb-4">
                 <div class="card shadow-lg h-100 service-card rounded-5">
                   <img
-                    src="./assets/aire-acondicionado.jpg"
+                    src="./assets/aire-acondicionado.webp"
                     class="card-img-top card-service-img"
                     alt="aires"
                     title="aires acondicionados"
