--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img
-              src="./assets/Postes.jpg"
+              src="./assets/Postes.webp"
               class="d-block w-100"
               alt="Imagen 1"
               title="postes"
@@ -388,7 +388,7 @@
               <div class="col-lg-4 mb-4">
                 <div class="card shadow-lg h-100 service-card rounded-5">
                   <img
-                    src="./assets/plano-electrico-4.jpg"
+                    src="./assets/plano-electrico-4.webp"
                     class="card-img-top img-fluid card-service-img"
                     alt="planos"
                     title="planos"
@@ -407,7 +407,7 @@
               <div class="col-lg-4 mb-4">
                 <div class="card shadow-lg h-100 service-card rounded-5">
                   <img
-                    src="./assets/domotica.jpg"
+                    src="./assets/domotica.webp"
                     class="card-img-top card-service-img"
                     alt="domotica"
                     title="domotica"
@@ -445,7 +445,7 @@
               <div class="col-lg-4 mb-4">
                 <div class="card shadow-lg h-100 service-card rounded-5">
                   <img
-                    src="./assets/automatizacion-industrial.jpg"
+                    src="./assets/automatizacion-industrial.webp"
                     class="card-img-top card-service-img"
                     alt="automatizacion"
                     title="automatizacion"
@@ -596,7 +596,7 @@
           <div class="row">
             <div class="col-md-12 text-center mb-5 contain-logo-foot">
               <img
-                src="./assets/recortada-removebg-preview.png"
+                src="./assets/recortada-removebg-preview.webp"
                 alt="logo-foot"
                 class="img-fluid"
                 title="logoFoot"
