--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
           <a class="navbar-brand" href="index.html">
             <img
               class="navbar-brand-logo img-fluid"
-              src="./assets/recortada-removebg-preview.png"
+              src="./assets/recortada-removebg-preview.webp"
               alt="logo"
               title ="logo"
             />
@@ -191,7 +191,7 @@
           </div>
           <div class="carousel-item">
             <img
-              src="./assets/medidores exterior.jpg"
+              src="./assets/medidores exterior.webp"
               class="d-block w-100"
               alt="Imagen 2"
               title="medidores"
@@ -200,7 +200,7 @@
           <div class="carousel-overlay"></div>
           <div class="carousel-item">
             <img
-              src="./assets/subestacion electrica.jpg"
+              src="./assets/subestacion electrica.webp"
               class="d-block w-100"
               alt="Imagen 3"
               title="subestacion"
@@ -350,7 +350,7 @@
               <div class="col-lg-4 mb-4">
                 <div class="card shadow-lg h-100 service-card rounded-5">
                   <img
-                    src="./assets/instalacion domiciliaria.jpg"
+                    src="./assets/instalacion domiciliaria.webp"
                     class="card-img-top card-service-img"
                     alt="domicilios"
                     title="domicilios"
@@ -369,7 +369,7 @@
               <div class="col-lg-4 mb-4">
                 <div class="card shadow-lg h-100 service-card rounded-5">
                   <img
-                    src="./assets/deteccion de fallas 2.jpg"
+                    src="./assets/deteccion de fallas 2.webp"
                     class="card-img-top card-service-img"
                     alt="fallas"
                     title="fallas"
