--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width = device-width, initial-scale=1" />
     <!-- <link rel="icon" href="./assets/favicon/" type="image/x-icon" /> -->
-    <!-- Pega tu código HTML ente las dos etiquetas  -->
+    
     <link
       rel="apple-touch-icon"
       sizes="57x57"
@@ -116,6 +116,7 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
+    <meta name="google-site-verification" content="qHUnm76XrfezP1TWz67F5xIU1pKysx0Gm9s7Q3ccwz0" />
   </head>
   <body>
     <!-- ========== HEADER ========== -->
