--- a/index.html
+++ b/index.html
@@ -645,16 +645,16 @@
         </div>
       </section>
     </footer>
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      defer
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
    
      <script
       async
-      
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAo6nFjf90lhTc7NytvuE6DeoSvu9sz4Xc&callback=initMap"
     ></script>
 
