--- a/index.html
+++ b/index.html
@@ -8,69 +8,82 @@
     <!-- <link rel="icon" href="./assets/favicon/" type="image/x-icon" /> -->
     
     <link
+      loading="lazy"
       rel="apple-touch-icon"
       sizes="57x57"
       href="./assets/favicon/apple-icon-57x57.png"
     />
     <link
+      loading="lazy"
       rel="apple-touch-icon"
       sizes="60x60"
       href="./assets/favicon/apple-icon-60x60.png"
     />
     <link
+      loading="lazy"
       rel="apple-touch-icon"
       sizes="72x72"
       href="./assets/favicon/apple-icon-72x72.png"
     />
     <link
+      loading="lazy"
       rel="apple-touch-icon"
       sizes="76x76"
       href="./assets/favicon/apple-icon-76x76.png"
     />
     <link
+      loading="lazy"
       rel="apple-touch-icon"
       sizes="114x114"
       href="./assets/favicon/apple-icon-114x114.png"
     />
     <link
+      loading="lazy"
       rel="apple-touch-icon"
       sizes="120x120"
       href="./assets/favicon/apple-icon-120x120.png"
     />
     <link
+      loading="lazy"
       rel="apple-touch-icon"
       sizes="144x144"
       href="./assets/favicon/apple-icon-144x144.png"
     />
     <link
+      loading="lazy"
       rel="apple-touch-icon"
       sizes="152x152"
       href="./assets/favicon/apple-icon-152x152.png"
     />
     <link
+      loading="lazy"
       rel="apple-touch-icon"
       sizes="180x180"
       href="./assets/favicon/apple-icon-180x180.png"
     />
     <link
+      loading="lazy"
       rel="icon"
       type="image/png"
       sizes="192x192"
       href="./assets/favicon/android-icon-192x192.png"
     />
     <link
+      loading="lazy"
       rel="icon"
       type="image/png"
       sizes="32x32"
       href="./assets/favicon/favicon-32x32.png"
     />
     <link
+      loading="lazy"
       rel="icon"
       type="image/png"
       sizes="96x96"
       href="./assets/favicon/favicon-96x96.png"
     />
     <link
+      loading="lazy"
       rel="icon"
       type="image/png"
       sizes="16x16"
@@ -126,6 +139,7 @@
         <div class="container p-4">
           <a class="navbar-brand" href="index.html">
             <img
+              loading="lazy"
               class="navbar-brand-logo img-fluid"
               src="./assets/recortada-removebg-preview.webp"
               alt="logo"
@@ -183,6 +197,9 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img
+              loading="lazy"
+              fetchpriority="high"
+              rel="preload"
               src="./assets/Postes.webp"
               class="d-block w-100"
               alt="Imagen 1"
@@ -192,6 +209,7 @@
           </div>
           <div class="carousel-item">
             <img
+              loading="lazy"
               src="./assets/medidores exterior.webp"
               class="d-block w-100"
               alt="Imagen 2"
@@ -201,6 +219,7 @@
           <div class="carousel-overlay"></div>
           <div class="carousel-item">
             <img
+              loading="lazy"
               src="./assets/subestacion electrica.webp"
               class="d-block w-100"
               alt="Imagen 3"
@@ -256,6 +275,7 @@
             <div class="col-md-6 mb-5">
               <div class="card">
                 <img
+                  loading="lazy"
                   class="section-us-img img-fluid"
                   src="./assets/trabajo quienes somos.webp"
                   alt="nosotros"
@@ -351,6 +371,7 @@
               <div class="col-lg-4 mb-4">
                 <div class="card shadow-lg h-100 service-card rounded-5">
                   <img
+                    loading="lazy"
                     src="./assets/instalacion domiciliaria.webp"
                     class="card-img-top card-service-img"
                     alt="domicilios"
@@ -370,6 +391,7 @@
               <div class="col-lg-4 mb-4">
                 <div class="card shadow-lg h-100 service-card rounded-5">
                   <img
+                    loading="lazy"
                     src="./assets/deteccion de fallas 2.webp"
                     class="card-img-top card-service-img"
                     alt="fallas"
@@ -389,6 +411,7 @@
               <div class="col-lg-4 mb-4">
                 <div class="card shadow-lg h-100 service-card rounded-5">
                   <img
+                    loading="lazy"
                     src="./assets/plano-electrico-4.webp"
                     class="card-img-top img-fluid card-service-img"
                     alt="planos"
@@ -408,6 +431,7 @@
               <div class="col-lg-4 mb-4">
                 <div class="card shadow-lg h-100 service-card rounded-5">
                   <img
+                    loading="lazy"
                     src="./assets/domotica.webp"
                     class="card-img-top card-service-img"
                     alt="domotica"
@@ -427,6 +451,7 @@
               <div class="col-lg-4 mb-4">
                 <div class="card shadow-lg h-100 service-card rounded-5">
                   <img
+                    loading="lazy"
                     src="./assets/aire-acondicionado.webp"
                     class="card-img-top card-service-img"
                     alt="aires"
@@ -446,6 +471,7 @@
               <div class="col-lg-4 mb-4">
                 <div class="card shadow-lg h-100 service-card rounded-5">
                   <img
+                    loading="lazy"
                     src="./assets/automatizacion-industrial.webp"
                     class="card-img-top card-service-img"
                     alt="automatizacion"
@@ -597,6 +623,7 @@
           <div class="row">
             <div class="col-md-12 text-center mb-5 contain-logo-foot">
               <img
+                loading="lazy"
                 src="./assets/recortada-removebg-preview.webp"
                 alt="logo-foot"
                 class="img-fluid"
