--- a/index.html
+++ b/index.html
@@ -112,20 +112,23 @@
 
     <link rel="stylesheet" href="./style.css" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preload" rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preload" rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
+      rel="preload"
       rel="preconnect"
       href="https://fonts.googleapis.com/css2?family=Oxanium:wght@200..800&display=swap"
       rel="stylesheet"
     />
 
     <link
+      rel="preload"
       rel="preconnect"
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
     <link
+      rel="preload"
       rel="preconnect"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
