--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
   <head>
     <title>NJB Servicio Técnico Eléctrico</title>
     <link rel="canonical" href="https://njbserviciotecnicoelectrico.com.ar" />
