--- a/index.html
+++ b/index.html
@@ -691,13 +691,9 @@
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAo6nFjf90lhTc7NytvuE6DeoSvu9sz4Xc&callback=initMap"
     ></script>
 
-   
-    <a
-      href="https://wa.me/5491122672371"
-      class="whatsapp-float align-content-center"
-      target="_blank"
-    >
-      <i class="bi-whatsapp"></i>
-    </a>
+   <a href="https://wa.me/5491122672371" class="whatsapp-float align-content-center" target="_blank" aria-label="Contáctanos por WhatsApp" title="Contáctanos por WhatsApp">
+  <i class="bi-whatsapp"></i>
+</a>
+
   </body>
 </html>
